[project]
name = "aliasgraph"
version = "0.2.0"
description = "OSINT username permutation and explainable account-attribution tool"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Jacob Hauptman" }]
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "rapidfuzz>=3.0.0",
    "networkx>=3.0",
    "selectolax>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
ml = [
    "sentence-transformers>=3.0.0",
    "numpy>=2.0.0",
]

[project.scripts]
aliasgraph = "aliasgraph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aliasgraph"]

[tool.hatch.build.targets.wheel.force-include]
"src/aliasgraph/resources/sites.json" = "aliasgraph/resources/sites.json"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
